--- a/trunk/ archeionweb/ArcheionWeb/ArcheionWeb/public_html/WEB-INF/web.xml
+++ b/trunk/ archeionweb/ArcheionWeb/ArcheionWeb/public_html/WEB-INF/web.xml
@@ -276,4 +276,7 @@
 		</security-constraint> <login-config> <auth-method>BASIC</auth-method>
 		</login-config
 	-->
+	 <session-config>  
+       <session-timeout>30</session-timeout>  
+     </session-config>
 </web-app>
